--- a/2延线BOM运行监测系统/MainWindow.xaml
+++ b/2延线BOM运行监测系统/MainWindow.xaml
@@ -5,18 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_2延线BOM运行监测系统"
         mc:Ignorable="d"
-        Title="BOM运行监测"  Height="400" Width="700" Background="White" WindowStyle="None" Icon="imgs/SG.ico" Loaded="MainWindow_OnLoaded" >
+        Title="BOM运行监测"  Height="400" Width="700" Background="White" WindowStyle="None" ResizeMode="NoResize" Icon="imgs/SG.ico" Loaded="MainWindow_OnLoaded" WindowStartupLocation="CenterScreen" >
     <Grid>
         <Grid Height="40" Background="White" VerticalAlignment="Top" MouseLeftButtonDown="UIElement_OnMouseLeftButtonDown">
             <Image Source="imgs/SG.ico" Width="40" Height="40" Margin="205,0,0,0" HorizontalAlignment="Left"/>
             <Label Height="40" Content="2延线BOM运行监测系统" FontSize="22" Margin="250,0,180,0" Foreground="Goldenrod" VerticalContentAlignment="Center"/>
-            <Button x:Name="closeBtn" Width="30" Height="30" Content="X" FontSize="24" HorizontalAlignment="Right" Margin="0,5,10,5" Padding="1,0,1,1"
+            <Button x:Name="closeBtn" Width="30" Height="30" Content="X" Foreground="DarkGoldenrod" FontSize="24" HorizontalAlignment="Right" Margin="0,5,10,5" Padding="1,0,1,1"
                     Background="Transparent" BorderBrush="Transparent" Click="ButtonBase_OnClick" MouseMove="UIElement_OnMouseMove" MouseLeave="UIElement_OnMouseLeave"/>
-            <Button x:Name="minBtn" Width="30" Height="30" Content="-" FontSize="24" FontWeight="Bold" HorizontalAlignment="Right" Margin="0,5,50,5" Padding="5"
+            <Button x:Name="minBtn" Width="30" Height="30" Content="-" Foreground="DarkGoldenrod" FontSize="24" FontWeight="Bold" HorizontalAlignment="Right" Margin="0,5,50,5" Padding="5"
                     Background="Transparent" BorderBrush="Transparent" Click="ButtonBase_OnClick" MouseMove="UIElement_OnMouseMove" MouseLeave="UIElement_OnMouseLeave"/>
         </Grid>
-        <TextBox x:Name="tbShowLog" Height="312" Margin="252,45,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" HorizontalAlignment="Left" 
-                 Width="419" IsReadOnly="True" BorderBrush="Gold" BorderThickness="1"/>
+        <TextBox x:Name="tbShowLog" Height="312" Margin="252,45,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" HorizontalAlignment="Left" VerticalScrollBarVisibility="Auto"
+                 Width="438" IsReadOnly="True" BorderBrush="Gold" BorderThickness="1"/>
         <Label x:Name="lbDate" Content="2000-11-11" FontSize="26" Foreground="DarkOrange" FontWeight="Bold" HorizontalAlignment="Left" Margin="44,38,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lbTime" Content="00：00：00" FontSize="30" Foreground="DarkOrange" FontWeight="Bold" HorizontalAlignment="Left" Margin="44,63,0,0" VerticalAlignment="Top"/>
 
@@ -35,11 +35,11 @@
 
         <Label  Content="车站：" Foreground="DarkOrange" FontSize="18" FontWeight="Bold" HorizontalAlignment="Left" Margin="22,107,0,0" VerticalAlignment="Top"/>
         <Label  Content="设备号：" Foreground="DarkOrange" FontSize="18" FontWeight="Bold" HorizontalAlignment="Left" Margin="22,140,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbStationName" Width="160" HorizontalContentAlignment="Center" Content="独墅湖邻里中心" FontSize="18" HorizontalAlignment="Left" Margin="86,107,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbEqNumber" Content="BOM001" FontSize="18" HorizontalAlignment="Left" Margin="117,140,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Width="96"/>
+        <Label x:Name="lbStationName" Width="160" Foreground="DodgerBlue" HorizontalContentAlignment="Center" Content="独墅湖邻里中心" FontSize="18" HorizontalAlignment="Left" Margin="86,107,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbEqNumber" Content="BOM001" Foreground="DodgerBlue" FontSize="18" HorizontalAlignment="Left" Margin="117,140,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Width="96"/>
         <Grid Height="30" VerticalAlignment="Bottom" Grid.Row="1">
-            <Label Content="版本号：V" HorizontalAlignment="Right" Margin="0,0,90,0" VerticalContentAlignment="Bottom" />
-            <Label x:Name="lbVersion" Content="1.0.0.1218" HorizontalAlignment="Right" Margin="0,0,20,0" VerticalContentAlignment="Bottom"/>
+            <Label Content="版本号：V" HorizontalAlignment="Right" Margin="0,0,70,0" VerticalContentAlignment="Bottom" />
+            <Label x:Name="lbVersion" Content="1.0.0.1218" HorizontalAlignment="Right" Margin="0,0,5,0" VerticalContentAlignment="Bottom" Height="30" VerticalAlignment="Top" Width="70"/>
         </Grid>
 
 
