--- a/2延线BOM运行监测系统/MainWindow.xaml
+++ b/2延线BOM运行监测系统/MainWindow.xaml
@@ -5,41 +5,63 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_2延线BOM运行监测系统"
         mc:Ignorable="d"
-        Title="BOM运行监测"  Height="400" Width="700" BorderBrush="Goldenrod" BorderThickness="1" Background="White" WindowStyle="None" ResizeMode="NoResize" Icon="imgs/SG.ico" Loaded="MainWindow_OnLoaded" WindowStartupLocation="CenterScreen" >
+        Title="BOM运行监测"  Height="405" Width="700" BorderBrush="Goldenrod" BorderThickness="1" Background="White" WindowStyle="None" ResizeMode="NoResize" 
+        Icon="imgs/SG.ico" Loaded="MainWindow_OnLoaded" WindowStartupLocation="CenterScreen" >
+    <Window.Resources>
+        <Style TargetType="Button" x:Key="btnStyle1" BasedOn="{StaticResource btnTrigger1}">
+            <Setter Property="Background" Value="Goldenrod"/>
+            <Setter Property="Width" Value="80"/>
+            <Setter Property="Height" Value="35"/>
+            <Setter Property="Margin" Value="7"/>
+        </Style>
+        <Style x:Key="lbBaseStyle" TargetType="Label">
+            <Setter Property="VerticalAlignment" Value="Top"/>
+        </Style>
+        <Style x:Key="lbStyle1" BasedOn="{StaticResource lbBaseStyle}" TargetType="Label">
+            <Setter Property="Foreground" Value="DarkOrange"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+        </Style>
+        <Style x:Key="lbStyle2" BasedOn="{StaticResource lbBaseStyle}" TargetType="Label">
+            <Setter Property="Foreground" Value="DodgerBlue"/>
+            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        </Style>
+    </Window.Resources>
+
     <Grid>
         <Grid Height="40" Background="White" VerticalAlignment="Top" MouseLeftButtonDown="UIElement_OnMouseLeftButtonDown">
             <Image Source="imgs/SG.ico" Width="40" Height="40" Margin="205,0,0,0" HorizontalAlignment="Left"/>
             <Label Height="40" Content="2延线BOM运行监测系统" FontSize="22" Margin="250,0,180,0" Foreground="Goldenrod" VerticalContentAlignment="Center"/>
-            <Button x:Name="closeBtn" Width="30" Height="30" Content="X" Foreground="DarkGoldenrod" FontSize="24" HorizontalAlignment="Right" Margin="0,5,10,5" Padding="1,0,1,1"
-                    Background="Transparent" BorderBrush="Transparent" Click="ButtonBase_OnClick" MouseMove="UIElement_OnMouseMove" MouseLeave="UIElement_OnMouseLeave"/>
-            <Button x:Name="minBtn" Width="30" Height="30" Content="-" Foreground="DarkGoldenrod" FontSize="24" FontWeight="Bold" HorizontalAlignment="Right" Margin="0,5,50,5" Padding="5"
-                    Background="Transparent" BorderBrush="Transparent" Click="ButtonBase_OnClick" MouseMove="UIElement_OnMouseMove" MouseLeave="UIElement_OnMouseLeave"/>
+            <Button x:Name="closeBtn" Style="{StaticResource BtnCloseStyle}" Content="X" FontSize="25" Click="ButtonBase_OnClick"/>
+            <Button x:Name="minBtn" Style="{StaticResource BtnCloseStyle}" Content="-" FontSize="30" FontWeight="Bold" Margin="0,0,40,0" Click="ButtonBase_OnClick"/>
         </Grid>
         <TextBox x:Name="tbShowLog" Height="334" Margin="200,45,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" HorizontalAlignment="Left" VerticalScrollBarVisibility="Auto"
                  Width="490" IsReadOnly="True" BorderBrush="Gold" BorderThickness="1"/>
-        <Label x:Name="lbDate" Content="2000-11-11" FontSize="26" Foreground="DarkOrange" FontWeight="Bold" HorizontalAlignment="Left" Margin="18,38,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbTime" Content="00：00：00" FontSize="30" Foreground="DarkOrange" FontWeight="Bold" HorizontalAlignment="Left" Margin="18,66,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbDate" Content="2000-11-11" FontSize="26" Margin="18,38,0,0" Style="{StaticResource lbStyle1}"/>
+        <Label x:Name="lbTime" Content="00：00：00" FontSize="30" Margin="18,66,0,0" Style="{StaticResource lbStyle1}"/>
 
         <StackPanel Width="100" HorizontalAlignment="Left" Orientation="Vertical" Margin="0,186,0,21">
-            <Button Content="重启BOM" x:Name="restartBOM" Background="Goldenrod" Width="80" Height="35" HorizontalAlignment="Left" Margin="10,7" MouseMove="UIElement_OnMouseMove" MouseLeave="UIElement_OnMouseLeave" Click="ButtonBase_OnClick"/>
-            <Button Content="磁盘修复" x:Name="diskBtn" Background="Goldenrod" Width="80" Height="35" Margin="7" MouseMove="UIElement_OnMouseMove" MouseLeave="UIElement_OnMouseLeave" Click="ButtonBase_OnClick"/>
-            <Button Content="清理过期日志" x:Name="clearLog" FontSize="11" Background="Goldenrod" Width="80" Height="35" Margin="7" MouseMove="UIElement_OnMouseMove" MouseLeave="UIElement_OnMouseLeave" Click="ButtonBase_OnClick"/>
-            <Button Content="初始化发卡" x:Name="initTPU" Background="Goldenrod" Width="80" Height="35" Margin="7" MouseMove="UIElement_OnMouseMove" MouseLeave="UIElement_OnMouseLeave" Click="ButtonBase_OnClick"/>
+            <Button Content="重启BOM" x:Name="restartBOM" Style="{StaticResource btnStyle1}" HorizontalAlignment="Left" Margin="10,7" Click="ButtonBase_OnClick"/>
+            <Button Content="磁盘修复" x:Name="diskBtn" Style="{StaticResource btnStyle1}" Click="ButtonBase_OnClick"/>
+            <Button Content="清理过期日志" x:Name="clearLog" Style="{StaticResource btnStyle1}" FontSize="12" Click="ButtonBase_OnClick"/>
+            <Button Content="初始化发卡" x:Name="initTPU" Style="{StaticResource btnStyle1}" Click="ButtonBase_OnClick"/>
         </StackPanel>
         <StackPanel Width="100" HorizontalAlignment="Left" Orientation="Vertical" Margin="100,186,0,21">
-            <Button Content="重装BOM" x:Name="reinstallBOM" Background="Goldenrod" Width="80" Height="35" HorizontalAlignment="Left" Margin="10,7" MouseMove="UIElement_OnMouseMove" MouseLeave="UIElement_OnMouseLeave" Click="ButtonBase_OnClick"/>
-            <Button Content="重置IE" x:Name="ieBtn" Background="Goldenrod" Width="80" Height="35" Margin="7" MouseMove="UIElement_OnMouseMove" MouseLeave="UIElement_OnMouseLeave" Click="ButtonBase_OnClick"/>
-            <Button Content="监测日志" x:Name="monitorLogBtn" Background="Goldenrod" Width="80" Height="35" Margin="7" MouseMove="UIElement_OnMouseMove" MouseLeave="UIElement_OnMouseLeave" Click="ButtonBase_OnClick"/>
-            <Button Content="暂停监测" x:Name="stopMonitor" Background="Goldenrod" Width="80" Height="35" Margin="7" MouseMove="UIElement_OnMouseMove" MouseLeave="UIElement_OnMouseLeave" Click="ButtonBase_OnClick"/>
+            <Button Content="重装BOM" x:Name="reinstallBOM" Style="{StaticResource btnStyle1}" HorizontalAlignment="Left" Margin="10,7" Click="ButtonBase_OnClick"/>
+            <Button Content="重置IE" x:Name="ieBtn" Style="{StaticResource btnStyle1}" Click="ButtonBase_OnClick"/>
+            <Button Content="监测日志" x:Name="monitorLogBtn" Style="{StaticResource btnStyle1}" Click="ButtonBase_OnClick"/>
+            <Button Content="暂停监测" x:Name="stopMonitor" Style="{StaticResource btnStyle1}" Click="ButtonBase_OnClick"/>
         </StackPanel>
 
-        <Label  Content="车站：" Foreground="DarkOrange" FontSize="18" FontWeight="Bold" HorizontalAlignment="Left" Margin="6,113,0,0" VerticalAlignment="Top" Width="66"/>
-        <Label  Content="设备号：" Foreground="DarkOrange" FontSize="18" FontWeight="Bold" HorizontalAlignment="Left" Margin="6,146,0,0" VerticalAlignment="Top" Width="74"/>
-        <Label x:Name="lbStationName" Width="138" Foreground="DodgerBlue" HorizontalContentAlignment="Center" Content="独墅湖邻里中心" FontSize="18" HorizontalAlignment="Left" Margin="57,113,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbEqNumber" Content="BOM001" Foreground="DodgerBlue" FontSize="18" HorizontalAlignment="Left" Margin="77,146,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Width="96"/>
-
-        <Label Content="版本号：V" HorizontalAlignment="Right" Margin="0,0,70,0" VerticalContentAlignment="Bottom" Height="25" VerticalAlignment="Bottom"/>
-        <Label x:Name="lbVersion" Content="1.0.0.1218" HorizontalAlignment="Right" Margin="0,0,5,0" VerticalContentAlignment="Top" Height="25" VerticalAlignment="Bottom" Width="70"/>
+        <Label  Content="车站：" FontSize="18" Margin="6,113,0,0" Width="66" Style="{StaticResource lbStyle1}"/>
+        <Label  Content="设备号：" FontSize="18" Margin="6,146,0,0" Width="74" Style="{StaticResource lbStyle1}"/>
+        <Label x:Name="lbStationName" Width="138" Style="{StaticResource lbStyle2}" Content="独墅湖邻里中心" Margin="57,113,0,0"/>
+        <Label x:Name="lbEqNumber" Content="BOM001" Style="{StaticResource lbStyle2}" Margin="77,146,0,0" Width="96"/>
+        <StackPanel Height="25" VerticalAlignment="Bottom" Width="700">
+            <Label x:Name="lbVersion" Content="版本号：V 1.0.0.1218" HorizontalAlignment="Right" Margin="0,0,5,0" VerticalContentAlignment="Top" Height="25" Width="140"/>
+        </StackPanel>
 
     </Grid>
 </Window>
