--- a/2延线BOM运行监测系统/App.xaml
+++ b/2延线BOM运行监测系统/App.xaml
@@ -4,31 +4,15 @@
              xmlns:local="clr-namespace:_2延线BOM运行监测系统"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         <Style x:Key="BtnCloseStyle" TargetType="Button">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Width" Value="40"/>
-            <Setter Property="Height" Value="40"/>
-            <Setter Property="Foreground" Value="DarkGoldenrod"/>
-            <Setter Property="BorderBrush" Value="Transparent"></Setter>
-            <Setter Property="HorizontalAlignment" Value="Right"></Setter>
-             
-             <Style.Triggers>
-                 <Trigger Property="IsMouseOver" Value="True">
-                     <Setter Property="Background" Value="LightBlue"></Setter>
-                 </Trigger>
-             </Style.Triggers>
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="res/CommonResources.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="res/MainWindowResources.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="res/MonitorLogWindowResources.xaml"></ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
         
-        <Style x:Key="btnTrigger1" TargetType="Button">
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="DodgerBlue"></Setter>
-                    <Setter Property="FontSize" Value="15"></Setter>
-                    <Setter Property="Foreground" Value="White"></Setter>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
+        
     </Application.Resources>
-    
     
 </Application>
