--- a/2延线BOM运行监测系统/MainWindow.xaml
+++ b/2延线BOM运行监测系统/MainWindow.xaml
@@ -8,35 +8,17 @@
         Title="BOM运行监测"  Height="405" Width="700" BorderBrush="Goldenrod" BorderThickness="1" Background="White" WindowStyle="None" ResizeMode="NoResize" 
         Icon="imgs/SG.ico" Loaded="MainWindow_OnLoaded" WindowStartupLocation="CenterScreen" >
     <Window.Resources>
-        <Style TargetType="Button" x:Key="btnStyle1" BasedOn="{StaticResource btnTrigger1}">
-            <Setter Property="Background" Value="Goldenrod"/>
-            <Setter Property="Width" Value="80"/>
-            <Setter Property="Height" Value="35"/>
-            <Setter Property="Margin" Value="7"/>
-        </Style>
-        <Style x:Key="lbBaseStyle" TargetType="Label">
-            <Setter Property="VerticalAlignment" Value="Top"/>
-        </Style>
-        <Style x:Key="lbStyle1" BasedOn="{StaticResource lbBaseStyle}" TargetType="Label">
-            <Setter Property="Foreground" Value="DarkOrange"/>
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="HorizontalAlignment" Value="Left"/>
-        </Style>
-        <Style x:Key="lbStyle2" BasedOn="{StaticResource lbBaseStyle}" TargetType="Label">
-            <Setter Property="Foreground" Value="DodgerBlue"/>
-            <Setter Property="FontSize" Value="18"/>
-            <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="HorizontalContentAlignment" Value="Center"/>
-        </Style>
+        
     </Window.Resources>
 
     <Grid>
         <Grid Height="40" Background="White" VerticalAlignment="Top" MouseLeftButtonDown="UIElement_OnMouseLeftButtonDown">
             <Image Source="imgs/SG.ico" Width="40" Height="40" Margin="205,0,0,0" HorizontalAlignment="Left"/>
             <Label Height="40" Content="2延线BOM运行监测系统" FontSize="22" Margin="250,0,180,0" Foreground="Goldenrod" VerticalContentAlignment="Center"/>
-            <Button x:Name="closeBtn" Style="{StaticResource BtnCloseStyle}" Content="X" FontSize="25" Click="ButtonBase_OnClick"/>
-            <Button x:Name="minBtn" Style="{StaticResource BtnCloseStyle}" Content="-" FontSize="30" FontWeight="Bold" Margin="0,0,40,0" Click="ButtonBase_OnClick"/>
+            <Button x:Name="closeBtn" Style="{StaticResource BtnCloseStyle}" Content="X" ToolTip="关闭" FontSize="25" Click="ButtonBase_OnClick"/>
+            <Button x:Name="minBtn" Style="{StaticResource BtnCloseStyle}" Content="-" ToolTip="最小化" FontSize="30" FontWeight="Bold" Margin="0,0,40,0" Click="ButtonBase_OnClick"/>
         </Grid>
+        <!--<Line Stroke="LightGray" StrokeThickness="0.8" X1="0" Y1="40" X2="700" Y2="40"></Line>-->
         <TextBox x:Name="tbShowLog" Height="334" Margin="200,45,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" HorizontalAlignment="Left" VerticalScrollBarVisibility="Auto"
                  Width="490" IsReadOnly="True" BorderBrush="Gold" BorderThickness="1"/>
         <Label x:Name="lbDate" Content="2000-11-11" FontSize="26" Margin="18,38,0,0" Style="{StaticResource lbStyle1}"/>
@@ -52,13 +34,13 @@
             <Button Content="重装BOM" x:Name="reinstallBOM" Style="{StaticResource btnStyle1}" HorizontalAlignment="Left" Margin="10,7" Click="ButtonBase_OnClick"/>
             <Button Content="重置IE" x:Name="ieBtn" Style="{StaticResource btnStyle1}" Click="ButtonBase_OnClick"/>
             <Button Content="监测日志" x:Name="monitorLogBtn" Style="{StaticResource btnStyle1}" Click="ButtonBase_OnClick"/>
-            <Button Content="暂停监测" x:Name="stopMonitor" Style="{StaticResource btnStyle1}" Click="ButtonBase_OnClick"/>
+            <Button Content="修改主机名" x:Name="changeHostname" Style="{StaticResource btnStyle1}" Click="ButtonBase_OnClick"/>
         </StackPanel>
 
         <Label  Content="车站：" FontSize="18" Margin="6,113,0,0" Width="66" Style="{StaticResource lbStyle1}"/>
         <Label  Content="设备号：" FontSize="18" Margin="6,146,0,0" Width="74" Style="{StaticResource lbStyle1}"/>
         <Label x:Name="lbStationName" Width="138" Style="{StaticResource lbStyle2}" Content="独墅湖邻里中心" Margin="57,113,0,0"/>
-        <Label x:Name="lbEqNumber" Content="BOM001" Style="{StaticResource lbStyle2}" Margin="77,146,0,0" Width="96"/>
+        <Label x:Name="lbEqNumber" Content="BOM001" Style="{StaticResource lbStyle2}" Margin="80,146,0,0" Width="96"/>
         <StackPanel Height="25" VerticalAlignment="Bottom" Width="700">
             <Label x:Name="lbVersion" Content="版本号：V 1.0.0.1000" HorizontalAlignment="Right" Margin="0,0,5,0" VerticalContentAlignment="Top" Height="25" Width="140"/>
         </StackPanel>
