--- a/2延线BOM运行监测系统/MainWindow.xaml
+++ b/2延线BOM运行监测系统/MainWindow.xaml
@@ -25,7 +25,7 @@
         </Grid>
         <!--<Line Stroke="LightGray" StrokeThickness="0.8" X1="0" Y1="40" X2="700" Y2="40"></Line>-->
         <TextBox x:Name="tbShowLog" Height="334" Margin="200,45,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" HorizontalAlignment="Left" VerticalScrollBarVisibility="Auto"
-                 Width="510" IsReadOnly="True" BorderBrush="Gold" BorderThickness="1" Background="Transparent"/>
+                 Width="510" IsReadOnly="True" BorderBrush="Gold" BorderThickness="1" Background="Transparent" TextChanged="TbShowLog_OnTextChanged"/>
         <Label x:Name="lbDate" Content="2000-11-11" FontSize="26" Margin="18,38,0,0" Style="{StaticResource lbStyle1}"/>
         <Label x:Name="lbTime" Content="00：00：00" FontSize="30" Margin="18,66,0,0" Style="{StaticResource lbStyle1}"/>
 
